# tic-tac-toe

./: .gitignore  CMakeLists.txt  grid.cpp  grid.h  main.cpp
libs/game/: AI.cpp  CMakeLists.txt  game.cpp
libs/game/include/: game.h
libs/grid/: CMakeLists.txt  grid.cpp
libs/grid/include/: grid.h
src/: AI.cpp  main.cpp
tests/: checkWinnerTest.cpp
